refactor: 清理测试代码和调试日志
🧹 清理内容:
- 移除package.json中的无效测试脚本
- 移除wrangler.toml中的开发环境测试配置
- 清理所有源文件中的console.log调试语句
- 移除调试函数和调试配置接口
- 删除过时的文档文件和cursor规则文件

✨ 优化效果:
- 减少生产环境日志输出，提升性能
- 简化代码结构，提高可维护性
- 移除不必要的测试引用和配置
- 保持代码整洁，专注核心功能

--- a/package.json
+++ b/package.json
@@ -9,18 +9,13 @@
     "build:watch": "tsc --watch",
     "build:clean": "rm -rf dist && npm run build",
     "dev": "tsc --watch",
-    "test": "node test-video-validator.js",
-    "test:types": "node test-types.js",
-    "test:douyin": "node test-douyin-parser.js",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "generate-types": "tsc --declaration --emitDeclarationOnly",
     "lint": "tsc --noEmit && echo 'TypeScript check passed'",
     "clean": "rm -rf dist types/generated",
     "deploy": "npm run build && wrangler deploy",
-    "start": "node dist/index.js",
-    "migration:backup": "find src -name '*.js' -exec cp {} {}.backup \\;",
-    "migration:restore": "find src -name '*.backup' -exec sh -c 'mv \"$1\" \"${1%.backup}\"' _ {} \\;"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "MIT",
